# core/router/v1/port.go
@@ -12,6 +12,17 @@ var Port *_Port
 type _Port struct {
 }
 
+// Get
+// @Summary Get Port Scan Result
+// @Tags PortScan
+// @Accept  json
+// @Produce  json
+// @Param search query string false "Fuzzy Query"
+// @Param date query string false "Date Select"
+// @Param page query string false "Current Page Default:1"
+// @Param size query string false "Current Size Default:10"
+// @Success 200 {object} models.Response
+// @Router /api/v1/port [get]
 func (*_Port) Get(ctx *gin.Context) {
 	var (
 		g     = models.Gin{Ctx: ctx}
