# core/swagger/swagger.yaml
@@ -34,6 +34,37 @@ info:
   title: Distributed Scan Services
   version: "1.0"
 paths:
+  /api/v1/port:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Fuzzy Query
+        in: query
+        name: search
+        type: string
+      - description: Date Select
+        in: query
+        name: date
+        type: string
+      - description: Current Page Default:1
+        in: query
+        name: page
+        type: string
+      - description: Current Size Default:10
+        in: query
+        name: size
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Get Port Scan Result
+      tags:
+      - PortScan
   /api/v1/rule:
     delete:
       consumes:
